# My-AI-Assistant

./: .gitignore  6-1test.py  README.md  app.py  db.py  docker-compose.yml  migrate_sqlite_to_pg.py  pyproject.toml  ref_loop.md  step11_hello_llm.py  step21_api.py  step22_session.py  step23_rag.py  上次会话成果.md  临时内容.txt  准备工作总结.md  阶段5技术方案.md  阶段6技术方案.md
agent/: bound.py  inspire_converge.py  inspire_diverge.py  main_graph.py  router.py  state.py  trace.py
backups/: README.md  manifest.json
dev_log/: 20260527_项目复制和uv虚拟环境.md  260527_阶段1.md  260527_阶段2.md  260527_项目启动与决策记录.md  260528_阶段2.5.md  260531_阶段3_SSE流式输出.md  260603_协作模式_ModeE骨架式教学.md  260605_阶段5_VectorStore_Search去重实现.md  260605_阶段5_VectorStore骨架_ModeE.md  260605_阶段5_向量检索进阶_ANN与父子分块策略.md  260606_阶段5_VectorStore代码审查与修复.md  260607_阶段5_Chunker语义分块_ModeE.md  260607_阶段5_Indexer摄入编排_ModeE.md  260607_阶段5_文档解析方案架构讨论.md  260608_阶段5_BM25数据流问答.md  260608_阶段5_RRF融合_ModeE.md  260610_阶段5_RAG架构深度学习_依赖管理.md  260610_阶段5_Step23_FastAPI集成完成.md  260611_阶段6.1_Agent骨架开发_ModeE教学.md  260612_知识点笔记_LangGraph基础与实战.md  260612_阶段6.1_Agent骨架完成.md  260618_阶段6.2_记忆系统_ModeE教学.md  260619_阶段6.2_文档状态核实与修正.md  260620_Git提交与分支概念学习.md  260620_grep_vs_Read_底层逻辑与偷懒根因分析.md  260620_智能体偷懒现象分析_grep_vs_read.md  260620_阶段6.2_记忆系统端到端验证.md  260621_阶段6.2_P1验收与集成快照机制.md  260621_阶段6.2_异步并发底层深度讨论.md  260622_6.3阶段讨论.md  260622_阶段6.2_P2_web_search验收通过.md  260622_阶段6.3_H1_H3_验收与深度答疑.md  260623_阶段6.3_H2_trace.py深度答疑.md  260624_阶段6.3_H2_main_graph深度答疑.md  260625_代码审阅_main_graph与state问题分析.md  260625_阶段6.3_H2验收完成.md  260626_阶段6.4_Loop专项测试.md  260626_阶段6.5_测试补充.md  (+8 more)
(+83 files in other folders)
