[project]
name = "personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "uvicorn>=0.48.0",
]
