[project]
name = "personal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "exa-py>=1.12.0",
    "tavily-python>=0.7.0",
    "fastapi>=0.136.3",
    "jieba>=0.42.1",
    "langchain>=1.3.4",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "markitdown>=0.1.6",
    "minio>=7.2.20",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pymilvus>=3.0.0",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",              # ← 新增
    "sentence-transformers>=3.0.0",  # ← 新增
    "uvicorn>=0.48.0",
]
